@@ -1,4 +1,9 @@
-// $Id: CHANGELOG.txt,v 1.115 2010/07/10 15:54:17 alexb Exp $
+// $Id: CHANGELOG.txt,v 1.116 2010/07/10 22:26:27 alexb Exp $
+
+Feeds 6.x 1.X XXXX
+------------------
+
+- #647222 cglusky, jeffschuler: Specify input format for feed items.
 
 Feeds 6.x 1.0 Beta 2, 2010-07-10
 --------------------------------
